                    Fixed 802.11b freq-channel translation
                    Switched madwifi combo to priv mode 0 to reduce mode
                     switching overhead when changing channels
                    Added 802.11a frequencies to freq2chan conversion
                    Tweaked hostap monitor mode to be more resilient to 
                     different hostap versions
Dec 06 2003  3.1.0  Fixed Makefile looking for monitor/unmonitor scripts
                    Added viha registrant (oops)
                    Added most of the infrastructure for MadWifi support but
                     Iwconfig_Set_IntPriv() has to be rewritten to handle
                     subioctls before it'll really work.
                    Added madwifi support.  However, the latest madwifi release
                     appears to not have monitor mode...
                    Fixed dual-arg iwpriv calls (ie, orinoco)
                    Fixed MadWifi support, all madwifi sources should be
                     functioning.
Dec 05 2003  3.1.0  First major CVS update in a while.  Most everything should
                     be working but documentation is a little sketchy about the
                     new setup.  Refer to kis_packsources.cc to see what your
                     favorite capsource got renamed to, real docs to follow 
                     soon.
                    Drone code rewritten, but debug info is still turned on. 
                     Expect it to be very noisy until I finish it.
                    Viha support is untested - I'm not sure the new channel
                     control/packstream code will work, so let me know.
                    Added 'wrt54g' card type for embedded drones on linksys
                     routers.  More on this project later.
                    Fixed mispasted code in prism2 pcap packet mangling
                    Added cardtype definition for wlanng_legacy
Dec 04 2003  3.1.0  Major refactoring of core code: