@@ -7,6 +7,9 @@ Dec 07 2003  3.1.0  Tweaked prism2 packet mangling to preserve ICV on packets
                     Added 802.11a frequencies to freq2chan conversion
                     Tweaked hostap monitor mode to be more resilient to 
                      different hostap versions
+                    Added pidfile writing to kismet_server
+                    Tweaked kismet script to check that the server is actually
+                     running before trying to start the client.
 Dec 06 2003  3.1.0  Fixed Makefile looking for monitor/unmonitor scripts
                     Added viha registrant (oops)
                     Added most of the infrastructure for MadWifi support but
